--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet">
       <link href="css/yetis.webflow.css" rel="stylesheet" type="text/css">
       <link href="css/normalize.css" rel="stylesheet" type="text/css">
+      <link href="css/index.css" rel="stylesheet" type="text/css">
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
       <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
       <link href="images/webclip.png" rel="apple-touch-icon">
@@ -25,9 +26,10 @@
 
       <img src="images/inu-yeti.png" class="fix"/>
       <img src="images/yeti-base2.png" class="fix2"/>
+      <a href="/#"><img id="logo" src="images/logo-cropped.gif"></a>
       <div id="top" class="section star-background wf-section">
          <div class="header w-container">
-            <div class="w-layout-grid grid">
+            <div class="w-layout-grid grid-header">
                <a href="#about" class="link w-inline-block">
                   <div class="header-menu">ABOUT</div>
                </a>
@@ -37,16 +39,13 @@
                <a href="#roadmap" class="link w-inline-block">
                   <div class="header-menu">ROADMAP</div>
                </a>
-<!--                <a href="/plasma.html" class="link w-inline-block">
-                  <div class="header-menu">Plasma</div>
-               </a> -->
-               <a href="/whitelistMint.html" id="mint-link" class="link w-inline-block">
-                  <div class="header-menu">Mint</div>
+                  <a href="/plasma.html" class="link w-inline-block">
+                  <div class="header-menu">PLASMA</div>
                </a>
             </div>
          </div>
       </div>
-      <div class="section banner wf-section">
+      <div class="section banner wf-section hide-on-mobile">
          <img src="images/bannergif.gif" loading="lazy" alt="" class="banner-img banner-img3">
          <div class="gradiant"></div>
       </div>
@@ -102,7 +101,7 @@
 
       <div id="roadmap" class="section body-1 wf-section">
          <div class="container w-container">
-            <div class="scroll">
+            <div id="inner-roadmap" class="scroll">
                <h1 class="body-heading section-title">ROADMAP</h1>
                <div class="body-text">
                   <br>
@@ -110,19 +109,16 @@
                   <p>- Launch of Space Yetis (4444)</p>
                   <p>- 5 Legendary may be minted randomly / 5 will be auctioned and transferred to a community wallet for future events and development of the project.</p>
                   <br>
-                  <br>
                   <h2 class="body-heading">Phase 1 (Release of $PLASMA)</h2>
                   <br>
                   <p>- $PLASMA will be launched after mint and will have utility within the Space Yeti Ecosystem.</p>
                   <p>- Token will be generated passively without needing to stake and will be used for future mints </p>
                   <p>- We will be hosting exclusive in person events and raffles </p>
                   <br>
-                  <br>
                   <h2 class="body-heading">Phase 2 - Sandbox</h2>
                   <br>
                   <p>- Space Yetis will purchase plots of land in the Sandbox for future use and utility </p>
                   <p>- Development of Space Yetis VX begins </p>
-                  <br>
                   <br>
                   <h2 class="body-heading">Phase 3 (Super Yeti Fusion) (Cyborg)</h2> 
                   <br>
@@ -130,11 +126,9 @@
                   <p>- 650 coins needed for fusion </p>
                   <p>- Only 5555 Super Yetis can be generated, with their own utility down the road </p>
                   <br>
-                  <br>
                   <h2 class="body-heading">Phase 4 - Partnerships</h2>
                   <br>
                   <p>- We have a partnership for a first ever Cross-IP PVP game in the NFT Universe with PVE mechanics! (announcement on this soon)</p>
-                  <br>
                   <br>
                   <h2 class="body-heading">Phase 5 - Attack On Planets</h2>
                   <br>
