--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <a href="#roadmap" class="link w-inline-block">
                   <div class="header-menu">ROADMAP</div>
                </a>
-                  <a href="/plasma.html" class="link w-inline-block">
+                  <a href="plasma.html" class="link w-inline-block">
                   <div class="header-menu">PLASMA</div>
                </a>
             </div>
