adjust mobile formatting

--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
       </div>
       <div id="about" class="section body-section body-1 wf-section">
          <div class="container w-container box2">
-                  <div>
+                  <div style="text-align: center;">
                      <h1 class="body-heading section-title yeti-title">SPACE YETI NFTS</h1>
-                     <div class="body-text">
                         <img id = "main-yeti" src="images/yegis.gif" loading="lazy" alt="">
-                        <p>
-                        Space Yetis are a 4444 genesis collection exploring the great unknown in the year 3022 after all human life has gone extinct. These beasts weren’t always superior and intelligent, they became who they are today from their precious Plasma in which they deeply commend. Their mission is to conquer all the Plasma in the Galaxy! </p>
+                     <div class="body-text">
+                        <p>Space Yetis are a 4444 genesis collection exploring the great unknown in the year 3022 after all human life has gone extinct. These beasts weren’t always superior and intelligent, they became who they are today from their precious Plasma in which they deeply commend. Their mission is to conquer all the Plasma in the Galaxy! </p>
                         <p>The idea behind Space Yetis came after discovering that many projects out there were put together in a rushed manner, with no long-term planning. After assembling a strong team over the past months who can execute well I am very excited about the future of the Yetis! The growth so far has been amazing, and this is just the beginning. </p>
                      </div>
                   </div>
