--- a/plasma.html
+++ b/plasma.html
@@ -59,7 +59,7 @@
          <div id="available-yeti-images" class="container box3" style="margin-top:0;width:100%;">
             <h1><span class="one">.</span><span class="two">.</span><span class="three">.</span></h1>
          </div>
-      </div>
+      </div><br>
          <img src="images/mintbanner.gif" loading="lazy" alt="" class="banner-img fixed-banner">
       </div>
   <div id="pending-transactions"></div>
