--- a/plasma.html
+++ b/plasma.html
@@ -63,6 +63,26 @@
          <img src="images/mintbanner.gif" loading="lazy" alt="" class="banner-img fixed-banner">
       </div>
   <div id="pending-transactions"></div>
+  <div>
+   <div class="section body-section footer wf-section">
+      <div class="container w-container footer-section">
+         <div class="w-row">
+            <a href="https://twitter.com/SpaceYetisNFT" target="_blank" class="link w-inline-block">
+               <img src="images/twitter.png" loading="lazy" alt="">
+            </a>
+            <a href="https://discord.gg/spaceyetis" target="_blank" class="link w-inline-block">
+               <img src="images/discord.png" loading="lazy" alt="">
+            </a>
+            <a href="https://opensea.io/collection/space-yetis-official" target="_blank" class="link w-inline-block">
+               <img src="images/opensea.png" loading="lazy" alt="">
+            </a>
+            <a href="https://etherscan.io/address/0x33a39af0f83e9d46a055e6eebde3296d26d916f4" target="_blank" class="link w-inline-block">
+               <img src="images/etherscan.png" loading="lazy" alt="">
+            </a>
+         </div>
+      </div>
+   </div>
+</div>
    </body>
       <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=611d0d9b752438eba744e08d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <script src="js/webflow.js" type="text/javascript"></script>
