more formatting fixes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                      <h1 class="body-heading section-title yeti-title">SPACE YETI NFTS</h1>
                         <img id = "main-yeti" src="images/yegis.gif" loading="lazy" alt="">
                      <div class="body-text">
-                        <p>Space Yetis are a 4444 genesis collection exploring the great unknown in the year 3022 after all human life has gone extinct. These beasts weren’t always superior and intelligent, they became who they are today from their precious Plasma in which they deeply commend. Their mission is to conquer all the Plasma in the Galaxy! </p>
+                        <p>Space Yetis are a 3333 genesis collection exploring the great unknown in the year 3022 after all human life has gone extinct. These beasts weren’t always superior and intelligent, they became who they are today from their precious Plasma in which they deeply commend. Their mission is to conquer all the Plasma in the Galaxy! </p>
                         <p>The idea behind Space Yetis came after discovering that many projects out there were put together in a rushed manner, with no long-term planning. After assembling a strong team over the past months who can execute well I am very excited about the future of the Yetis! The growth so far has been amazing, and this is just the beginning. </p>
                      </div>
                   </div>
@@ -105,13 +105,14 @@
                <div class="body-text">
                   <br>
                   <h2 class="body-heading">Phase 0 (Space Yetis Mint)</h2>
-                  <p>- Launch of Space Yetis (4444)</p>
+                  <p>- Launch of Space Yetis (3333))</p>
                   <p>- 5 Legendary may be minted randomly / 5 will be auctioned and transferred to a community wallet for future events and development of the project.</p>
                   <br>
                   <h2 class="body-heading">Phase 1 (Release of $PLASMA)</h2>
                   <br>
                   <p>- $PLASMA will be launched after mint and will have utility within the Space Yeti Ecosystem.</p>
                   <p>- Token will be generated passively without needing to stake and will be used for future mints </p>
+                  <p>- $PLASMA will be generated for 10 years </p>
                   <p>- We will be hosting exclusive in person events and raffles </p>
                   <br>
                   <h2 class="body-heading">Phase 2 - Sandbox</h2>
