--- a/plasma.html
+++ b/plasma.html
@@ -40,7 +40,7 @@
          </div>
       </div>
       <h1 style="text-align: center;">PLASMA STATION</h1>
-      <p id="plasma-description"> $PLASMA is an ERC20 utility token used within the Space Yeti Ecosystem. Yetis generate $PLASMA passively, without needing to be staked. Each Yeti generates 5 $PLASMA per day.</p>
+      <p id="plasma-description"> $PLASMA is an ERC20 utility token used within the Space Yeti Ecosystem. Yetis generate $PLASMA passively, without needing to be staked. Each Yeti generates 5 $PLASMA per day. $PLASMA will be generated for 10 years.</p>
       <div class="lightning flashit"></div><br>
       <div id="plasma-balances">
          <div id="your-plasma-container" class="box box2 plasma-balance-container">
