plasma interface changes

--- a/plasma.html
+++ b/plasma.html
@@ -66,7 +66,7 @@
       <h1 style="text-align: center;">YOUR CREW</h1>
       <div id="your-yeti-section">
          <div id="available-yeti-images" class="container box3" style="margin-top:0;width:100%;">
-            <h1><span class="one">.</span><span class="two">.</span><span class="three">.</span></h1>
+            <h3>Searching for Yetis <span class="one">.</span><span class="two">.</span><span class="three">.</span></h3>
          </div>
       </div><br>
          <img src="images/mintbanner.gif" loading="lazy" alt="" class="banner-img fixed-banner">
