--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                   <h2 class="body-heading">Phase 0: Space Yetis Mint</h2>
                   <p>- Launch of 3333 Space Yetis - SOLD OUT.</p>
                   <p>- 5 Legendary Yetis were minted randomly, 5 were auctioned and transferred to a community wallet for future events and development of the project.</p>
-                  <p>- See Legendary Yetis on <a href="https://opensea.io/collection/space-yetis-official?search[sortAscending]=true&search[sortBy]=PRICE&search[stringTraits][0][name]=LEGENDARY&search[stringTraits][0][values][0]=Pepe%20Yeti&search[stringTraits][0][values][1]=Monkey%20King%20Yeti&search[stringTraits][0][values][2]=Mecha%20Yeti&search[stringTraits][0][values][3]=Custom%20Yeti%202&search[stringTraits][0][values][4]=Custom%20Yeti%201&search[stringTraits][0][values][5]=Chewbacca%20Yeti&search[stringTraits][0][values][6]=Celestial%20Yeti&search[stringTraits][0][values][7]=Astro%20Yeti&search[stringTraits][0][values][8]=Alien%20Yeti&search[stringTraits][0][values][9]=Alpha%20Yeti" style="color: #0FFEF2" target="_blank" class="link">OpenSea</a></p>
+                  <p>- See Legendary Yetis on <a href="https://opensea.io/collection/space-yetis-official?search[sortAscending]=true&search[sortBy]=PRICE&search[stringTraits][0][name]=LEGENDARY&search[stringTraits][0][values][0]=Pepe%20Yeti&search[stringTraits][0][values][1]=Monkey%20King%20Yeti&search[stringTraits][0][values][2]=Mecha%20Yeti&search[stringTraits][0][values][3]=Custom%20Yeti%202&search[stringTraits][0][values][4]=Custom%20Yeti%201&search[stringTraits][0][values][5]=Chewbacca%20Yeti&search[stringTraits][0][values][6]=Celestial%20Yeti&search[stringTraits][0][values][7]=Astro%20Yeti&search[stringTraits][0][values][8]=Alien%20Yeti&search[stringTraits][0][values][9]=Alpha%20Yeti" style="color: #0FFEF2" target="_blank" class="link">OpenSea⬈</a></p>
                   <br>
-                  <h2 class="body-heading"><span class="blinking">></span> Phase 1: Release of $PLASMA</h2>
+                  <h2 class="body-heading"><span class="one">></span><span class="two">></span><span class="three">></span> Phase 1: Release of $PLASMA</h2>
                   <br>
                   <p>- $PLASMA is the utility token within the Space Yeti ecosystem.</p>
                   <p>- Token will be generated passively without needing to stake and will be used for future mints.</p>
@@ -164,7 +164,7 @@
                <h4>$PLASMA will have uses in the Space Yetis ecosystem, including Super Yeti minting and other future developments.</h4>
                <br>
                <h2>Q: I have a Space Yeti. How can I earn $PLASMA?<h2>
-               <h4>All Space Yetis earn 5 $PLASMA per day. Unlike other projects, $PLASMA is earned passively, saving users from the transaction costs associated with staking. Earned $PLASMA can be claimed using the <a href="plasma.html" target="_blank" class="link">$PLASMA Station</a>.</h4>
+               <h4>All Space Yetis earn 5 $PLASMA per day. Unlike other projects, $PLASMA is earned passively, saving users from the transaction costs associated with staking. Earned $PLASMA can be claimed using the <a href="plasma.html" target="_blank" class="link">$PLASMA Station⬈</a> .</h4>
                <br>
                <h2>Q: Is there a cap on $PLASMA supply?<h2>
                <h4>$PLASMA will only be generated for 10 years, after which earning will cease and supply will be capped.</h4>
