--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                   <a href="https://opensea.io/collection/space-yetis-official" target="_blank" class="link w-inline-block">
                      <img src="images/opensea.png" loading="lazy" alt="">
                   </a>
+                  <a href="https://looksrare.org/collections/0x33a39af0F83E9D46a055e6eEbde3296D26d916F4" target="_blank" class="link w-inline-block">
+                     <img src="images/looks-green.png" loading="lazy" alt="">
+                  </a>
                   <a href="https://etherscan.io/address/0x33a39af0f83e9d46a055e6eebde3296d26d916f4" target="_blank" class="link w-inline-block">
                      <img src="images/etherscan.png" loading="lazy" alt="">
                   </a>
