start on cyborgs

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                   <a href="plasma.html" class="link w-inline-block">
                   <div class="header-menu">PLASMA</div>
                </a>
+               <a href="/fusion.html" class="link w-inline-block">
+                  <div class="header-menu">FUSION</div>
+               </a>
             </div>
          </div>
       </div>
