--- a/fusion.html
+++ b/fusion.html
@@ -20,7 +20,7 @@
       <link href="css/normalize.css" rel="stylesheet" type="text/css">
       <link href="css/webflow.css" rel="stylesheet" type="text/css">
       <link href="css/yetis.webflow.css" rel="stylesheet" type="text/css">
-      <link href="css/plasma.css" rel="stylesheet" type="text/css">
+      <link href="css/fusion.css" rel="stylesheet" type="text/css">
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
       <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
       <link href="images/webclip.png" rel="apple-touch-icon">
@@ -52,35 +52,46 @@
             </span>
          </div>
       </div>
-      <h1 style="text-align: center;">PLASMA STATION</h1>
-      <p id="plasma-description"> $PLASMA is an ERC20 utility token used within the Space Yeti Ecosystem. Yetis generate $PLASMA passively, without needing to be staked. Each Yeti generates 5 $PLASMA per day. $PLASMA will be generated for 10 years.</p>
-      <div class="lightning flashit"></div><br>
-      <div id="plasma-balances">
-         <div id="your-plasma-container" class="box box2 plasma-balance-container">
-            <h2>Your $PLASMA</h2>
-            <h2><span id="your-plasma">0.0</span><img src='./images/plasma.png' width=32 style="margin-bottom:6px;margin-left:5px"></h2>
-            <button class=" button" onclick="importPlasmaToWallet()">Import $PLASMA to Wallet </button>
+      <h1 style="text-align: center;">FUSION REACTOR</h1>
+      <p id="fusion-description"> Fuse two Space Yetis to create a powerful Cyborg! 
+         650 $PLASMA will be spent from your wallet and burned by fusion. Your Cyborg will be minted to your wallet.
+         Yetis used for fusion are not burned and will remain intact in your wallet.
+      </p>
+      <br>
+      <div id="your-dragon-section" class="container box3">
+         <div id="tributes">
+            <div class="tribute" id="burn-1">
+               <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><h2>???</h2></div>
+            </div>
+            <div class="tribute" id="burn-2">
+               <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><h2>???</h2></div>
+            </div>
+            <button id="select-tributes-button" class="button" onclick="displayDragonSelect()">SELECT SUBJECTS</button>
          </div>
-         <div class="box box2 plasma-balance-container"> 
-            <h2>Claimable $PLASMA</h2>
-            <h2><span id="claimable-plasma">0.0</span><img src='./images/plasma.png' width=32 style="margin-bottom:6px;margin-left:5px"></h2>
-            <button class=" button" onclick="claimPlasma()">Claim $PLASMA </button>
+         <div id="fusion-controls" style="position: relative;">
+            <div id="fusion-display" class="crt">
+               <h2>YOUR PLASMA:</h2>
+               <h2>650</h2>
+               <h2>PLASMA COST:</h2>
+               <h2>650</h2>   
+            </div>
+
+
+            <!-- <h2>READY TO FUSE?</h2>
+            <p id="fusion-description-2" style="padding-top:.5vw"> </p>
+            <h2>Balance: <span id="your-scale"><span class="one">.</span><span class="two">.</span><span class="three">.</span></span> <img src='./images/plasma.png' width=32 style="margin-bottom:6px;margin-left:5px"></h2>
+            <h2>Cost: 650</span> <img src='./images/plasma.png' width=32 style="margin-bottom:6px;margin-left:5px"></h2> -->
+            <button id="burn-button" class="button" onclick="burn()">FUSE</button>
          </div>
       </div>
-      <div class="hidden" id="migration-section">
-         <div class="container box box2" style="margin-top:0;width:100%;">
-            <h2>MIGRATE $PLASMA</h2>
-            <p id="migration-description"> A contract migration is required to update your pending balances. Migration will happen passively whenever you transfer a Space Yeti, or you can manually migrate using the button below.
-            </p><br>
-            <button class=" button" onclick="migrate()">Migrate $PLASMA </button>
+      <br>
+      <h1 style="text-align: center;">YOUR CYBORGS</h1>
+      <div id="your-elder-dragon-section" class="container box3">
+         <h2 id="elder-label" class="hidden">Cyborgs <span id="num-elders">(<span class="one">.</span><span class="two">.</span><span class="three">.</span>)</span></h2>
+         <div id="available-elder-images" style="margin-top:0;width:100%;">
+            <h3>Scanning for Cyborgs <span class="one">.</span><span class="two">.</span><span class="three">.</span></h3>
          </div>
-      </div><br>
-      <h1 style="text-align: center;">YOUR CREW</h1>
-      <div id="your-yeti-section">
-         <div id="available-yeti-images" class="container box3" style="margin-top:0;width:100%;">
-            <h3>Searching for Yetis <span class="one">.</span><span class="two">.</span><span class="three">.</span></h3>
-         </div>
-      </div><br>
+      </div>
          <img src="images/mintbanner.gif" loading="lazy" alt="" class="banner-img fixed-banner">
       </div>
   <div id="pending-transactions"></div>
