add crt effect to subject labels

--- a/fusion.html
+++ b/fusion.html
@@ -88,10 +88,10 @@
          <div id="fusion-section-inner">
             <div id="subjects">
                <div class="subject" id="subject-1">
-                  <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><h2>???</h2></div>
+                  <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><div style="position: relative;"><h2 class="crt">???</h2></div></div>
                </div>
                <div class="subject" id="subject-2">
-                  <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><h2>???</h2></div>
+                  <div><img src="./images/bluryeti.png" style="background-color:rgb(170, 169, 169)"><div style="position: relative;"><h2 class="crt">???</h2></div></div>
                </div>
                <button id="select-subjects-button" class="button" onclick="displayYetiSelect()">SELECT SUBJECTS</button>
             </div>
