--- a/index.html
+++ b/index.html
@@ -40,39 +40,39 @@
       <div id="top" class="section star-background wf-section">
          <div class="header w-container">
             <div class="w-layout-grid grid-header hide-on-mobile">
-               <a href="#about" class="link w-inline-block">
+               <a href="./#about" class="link w-inline-block">
                   <div class="header-menu">ABOUT</div>
                </a>
-               <a href="#team" class="link w-inline-block">
+               <a href="./#team" class="link w-inline-block">
                   <div class="header-menu">TEAM</div>
                </a>
-               <a href="#roadmap" class="link w-inline-block">
+               <a href="./#roadmap" class="link w-inline-block">
                   <div class="header-menu">ROADMAP</div>
                </a>
-                  <a href="plasma.html" class="link w-inline-block">
+                  <a href="./plasma.html" class="link w-inline-block">
                   <div class="header-menu">PLASMA</div>
                </a>
-               <a href="/fusion.html" class="link w-inline-block">
+               <a href="./fusion.html" class="link w-inline-block">
                   <div class="header-menu">FUSION</div>
                </a>
             </div>
             <div class="hide-on-desktop">
                <div style="text-align: center;">
-                  <a href="/#about" class="link w-inline-block" style="width: 30%;">
+                  <a href="./#about" class="link w-inline-block" style="width: 30%;">
                      <div class="header-menu">ABOUT</div>
                   </a>
-                  <a href="/#team" class="link w-inline-block" style="width: 30%;">
+                  <a href="./#team" class="link w-inline-block" style="width: 30%;">
                      <div class="header-menu">TEAM</div>
                   </a>
-                  <a href="/#roadmap" class="link w-inline-block" style="width: 30%;">
+                  <a href="./#roadmap" class="link w-inline-block" style="width: 30%;">
                      <div class="header-menu">ROADMAP</div>
                   </a>
                </div>
                <div style="text-align: center;">
-                  <a href="/plasma.html" class="link w-inline-block" style="width: 35%;">
+                  <a href="./plasma.html" class="link w-inline-block" style="width: 35%;">
                      <div class="header-menu">PLASMA</div>
                   </a>
-                  <a href="/fusion.html" class="link w-inline-block" style="width: 35%;">
+                  <a href="./fusion.html" class="link w-inline-block" style="width: 35%;">
                      <div class="header-menu">FUSION</div>
                   </a>
                </div>
