faster fusion page

--- a/fusion.html
+++ b/fusion.html
@@ -82,8 +82,7 @@
       <br>
       <div id="fusion-section" class="container box3">
          <br class="hide-on-desktop">
-         <h1 class="hide-on-mobile" id="fusion-header"><span id="fusion-header-text">FUSE-O-TRON 3000</span></h1>
-         <h2 class="hide-on-desktop" id="fusion-header"><span id="fusion-header-text">FUSE-O-TRON 3000</span></h2>
+         <img id="fusion-header-gif" src="images/neon-header.gif">
          <br class="hide-on-desktop">
          <div id="fusion-section-inner">
             <div id="subjects">
