rm super yeti references

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                   <p>- Space Yetis will purchase plots of land in the Sandbox for future use and utility.</p>
                   <p>- Development of Space Yetis VX begins.</p>
                   <br>
-                  <h2 class="body-heading"><span class="one">></span><span class="two">></span><span class="three">></span> Phase 3: Super Yeti Fusion - Cyborg</h2> 
+                  <h2 class="body-heading"><span class="one">></span><span class="two">></span><span class="three">></span> Phase 3: Cyborg Fusion</h2> 
                   <br>
-                  <p>- Super Yeti fusion using 2 Space Yetis (Does not burn Genesis).</p>
+                  <p>- Cyborgs can be fused using 2 Space Yetis (Does not burn Genesis).</p>
                   <p>- 650 $PLASMA needed for fusion.</p>
-                  <p>- Only 5555 Super Yetis can be generated, with their own utility down the road.</p>
+                  <p>- Only 5555 Cyborgs can be generated, with their own utility down the road.</p>
                   <br>
                   <h2 class="body-heading">Phase 4: Partnerships</h2>
                   <br>
@@ -169,7 +169,7 @@
                   <h2 class="body-heading">Phase 5: Attack On Planets</h2>
                   <br>
                   <p>- Yeti holders will be able to send their yetis on raids to earn rewards.</p>
-                  <p>- Super Yetis (Cyborgs) will play an important role in this phase. 👀</p>
+                  <p>- Cyborgs will play an important role in this phase. 👀</p>
                </div>
             </div>
          </div>
@@ -186,7 +186,7 @@
                <h4>$PLASMA is the utility token for the Space Yetis ecosystem. It is NOT an investment and has NO economic value.</h4>
                <br>
                <h2>Q: What can I do with $PLASMA?<h2>
-               <h4>$PLASMA will have uses in the Space Yetis ecosystem, including Super Yeti minting and other future developments.</h4>
+               <h4>$PLASMA will have uses in the Space Yetis ecosystem, including Cyborg fusion and other future developments.</h4>
                <br>
                <h2>Q: I have a Space Yeti. How can I earn $PLASMA?<h2>
                <h4>All Space Yetis earn 5 $PLASMA per day. Unlike other projects, $PLASMA is earned passively, saving users from the transaction costs associated with staking. Earned $PLASMA can be claimed using the <a href="plasma.html" target="_blank" class="link">$PLASMA Station⬈</a> .</h4>
