clear pending button

--- a/plasma.html
+++ b/plasma.html
@@ -108,6 +108,7 @@
   <div>
    <div class="section body-section footer wf-section">
       <div class="container w-container footer-section">
+      <button class="button" id="clear-button" onclick="clearPendingTxs()">Clear Pending Transactions</button>
          <div class="w-row">
             <a href="https://twitter.com/SpaceYetisNFT" target="_blank" class="link w-inline-block">
                <img src="images/twitter.png" loading="lazy" alt="">
