--- a/fusion.html
+++ b/fusion.html
@@ -145,16 +145,16 @@
             <a href="https://twitter.com/SpaceYetisNFT" target="_blank" class="link w-inline-block">
                <img src="images/twitter.png" loading="lazy" alt="">
             </a>
-            <a href="https://discord.gg/spaceyetis" target="_blank" class="link w-inline-block">
+            <a href="https://discord.gg/spaceyetisnft" target="_blank" class="link w-inline-block">
                <img src="images/discord.png" loading="lazy" alt="">
             </a>
-            <a href="https://opensea.io/collection/space-yetis-official" target="_blank" class="link w-inline-block">
+            <a href="https://opensea.io/collection/cyborg-yetis" target="_blank" class="link w-inline-block">
                <img src="images/opensea.png" loading="lazy" alt="">
             </a>
-            <a href="https://looksrare.org/collections/0x33a39af0F83E9D46a055e6eEbde3296D26d916F4" target="_blank" class="link w-inline-block">
+            <a href="https://looksrare.org/collections/0xCcD1Cb7D615615330BAD5620bf3224E2f3930Bd5" target="_blank" class="link w-inline-block">
                <img src="images/looks-green.png" loading="lazy" alt="">
             </a>
-            <a href="https://etherscan.io/address/0x33a39af0f83e9d46a055e6eebde3296d26d916f4" target="_blank" class="link w-inline-block">
+            <a href="https://etherscan.io/address/0xccd1cb7d615615330bad5620bf3224e2f3930bd5" target="_blank" class="link w-inline-block">
                <img src="images/etherscan.png" loading="lazy" alt="">
             </a>
          </div>
