--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   <a href="https://twitter.com/SpaceYetisNFT" target="_blank" class="link w-inline-block">
                      <img src="images/twitter.png" loading="lazy" alt="">
                   </a>
-                  <a href="https://discord.gg/spaceyetis" target="_blank" class="link w-inline-block">
+                  <a href="https://discord.gg/spaceyetisnft" target="_blank" class="link w-inline-block">
                      <img src="images/discord.png" loading="lazy" alt="">
                   </a>
                   <a href="https://opensea.io/collection/space-yetis-official" target="_blank" class="link w-inline-block">
